# Amazon-Nova-VideoMCP-RAG

./: .env.example  .gitignore  README.md  gunicorn_config.py  main.py  package-lock.json  pyproject.toml  run.sh
.records/: registry_20260312_215310.json  registry_20260312_224106.json  registry_20260312_231227.json  registry_20260312_235908.json  registry_20260313_003041.json
app/: config.py  logging_config.py
app/api/: app.py  routers.py  schemas.py
app/api/endpoints/v1/: chat.py  video.py
app/api/middlewares/: __init__.py
app/video_rag/: config.py
app/video_rag/agent/: __init__.py  base.py  memory.py  models.py  nova_agent.py
app/video_rag/mcp/: prompts.py  resources.py  server.py  tools.py
app/video_rag/mcp/video/: functions.py  media.py  models.py  nova_client.py  processor.py  registry.py  search_engine.py  transcription.py
